# femic-mkrf-instance

./: .gitattributes  .gitignore  QUICKSTART.md  README.md  pyproject.toml
.datalad/: config
config/: patchworks.runtime.mkrf_rebuild.windows.yaml  patchworks.runtime.windows.yaml  rebuild.spec.yaml  run_profile.mkrf.yaml  silviculture.mkrf.yaml  source_inputs.mkrf_rebuild.yaml
docs/: analysis-units-and-yield-curves.rst  benchmark-results.rst  caveats-and-deferred-seams.rst  conf.py  data-package-crosswalk.rst  docs-ownership-and-release.rst  evidence-and-boundaries.rst  figure-appendix.rst  getting-started.rst  index.rst  legacy-archive-reference.rst  metadata-and-lineage.rst  model-anatomy.rst  operator-runbook.rst  rebuild-and-qa.rst  treatments-and-state-logic.rst  troubleshooting.rst  yield-curve-comparisons.rst
metadata/: artifact_checksums.sha256  ct_treatment_contract.yaml  large_artifacts.sha256  legacy_attribute_passthrough.yaml  legacy_attributes_translation.yaml  legacy_builder_activation_plan.yaml  legacy_compiled_package_reference.yaml  legacy_compiled_track_evidence_reconciliation.yaml  legacy_curve_library_translation.yaml  legacy_generated_xml_reconciliation.yaml  legacy_input_variables_translation.yaml  legacy_netdown_translation.yaml  legacy_rebuild_readiness_criteria.yaml  legacy_runtime_config_wiring.yaml  legacy_runtime_model_layout.yaml  legacy_runtime_track_reconciliation.yaml  legacy_runtime_xml_emission.yaml  legacy_source_input_publication_boundary.yaml  legacy_source_reproducibility_boundary.yaml  legacy_treat_translation.yaml  (+5 more)
(+378 files in other folders)
