[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "femic-mkrf-freshforge"
version = "0.1.0a1"
description = "MKRF-owned FreshForge provider adapter for FEMIC rebuild workflows"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "UBC FRESH Lab"},
]

[project.entry-points."freshforge.providers"]
mkrf = "mkrf_freshforge:provider_factory"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
